
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int pid_t ;


 int CLONE_FILES ;
 int CLONE_VM ;
 int SIGCHLD ;
 scalar_t__ STACK_SIZE ;
 int clone (int ,scalar_t__,int,int *) ;
 int clone_thread ;
 scalar_t__ cstack ;

pid_t start_listener()
{
  pid_t pid;
  pid = clone(clone_thread, cstack+STACK_SIZE-8,
              CLONE_VM|CLONE_FILES|SIGCHLD, ((void*)0));

  return pid;
}
