; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux_x86-64/local/extr_9083.c_start_listener.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux_x86-64/local/extr_9083.c_start_listener.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@clone_thread = common dso_local global i32 0, align 4
@cstack = common dso_local global i64 0, align 8
@STACK_SIZE = common dso_local global i64 0, align 8
@CLONE_VM = common dso_local global i32 0, align 4
@CLONE_FILES = common dso_local global i32 0, align 4
@SIGCHLD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @start_listener() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @clone_thread, align 4
  %3 = load i64, i64* @cstack, align 8
  %4 = load i64, i64* @STACK_SIZE, align 8
  %5 = add nsw i64 %3, %4
  %6 = sub nsw i64 %5, 8
  %7 = load i32, i32* @CLONE_VM, align 4
  %8 = load i32, i32* @CLONE_FILES, align 4
  %9 = or i32 %7, %8
  %10 = load i32, i32* @SIGCHLD, align 4
  %11 = or i32 %9, %10
  %12 = call i32 @clone(i32 %2, i64 %6, i32 %11, i32* null)
  store i32 %12, i32* %1, align 4
  %13 = load i32, i32* %1, align 4
  ret i32 %13
}

declare dso_local i32 @clone(i32, i64, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
